tests/instantiating/irq_invalid_in_trigger/stderr.golden
error: 'in-trigger' property must be "Edge" or "Level", current value "abc"
bus.fbd +3:16
   |
 3 | 		in-trigger = "abc"
   | 		             ^^^^^
